# src/routes/Tareas.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import { crearTarea, actualizarEstado } from "../controllers/Tareas.controller";
+
+const router = Router();
+
+router.post("/", crearTarea);
+router.put("/:id/estado", actualizarEstado);
+
+export default router;
